view ranking&ranking complete